# Baa-bot

./: .env.example  Dockerfile  README-Railway.md  alembic.ini  docker-compose.yml  pyproject.toml
bot/: config.py  main.py
bot/handlers/: admin.py  baa.py  casino.py  economy.py  sheep.py  social.py
bot/middlewares/: __init__.py
bot/models/: __init__.py  db.py
bot/services/: baa_service.py  bank_service.py  casino_service.py  daily_service.py  economy_service.py  gathering_service.py  level_service.py  sheep_service.py
bot/tasks/: __init__.py
bot/utils/: formatters.py  redis_keys.py
migrations/: env.py
scripts/: seed_catalog.py
